// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Should disabled work 1`] = `
<div>
  <div
    class="ant-color-picker-trigger ant-color-picker-trigger-disabled"
  >
    <div
      class="ant-color-picker-trigger-container"
    >
      <div
        class="ant-color-picker-trigger-layer"
        style="background-color: rgb(22, 119, 255);"
      />
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should render trigger work 1`] = `
<div>
  <div
    class="trigger"
  />
</div>
`;

exports[`ColorPicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-color-picker-trigger ant-color-picker-rtl"
>
  <div
    class="ant-color-picker-trigger-container"
  >
    <div
      class="ant-color-picker-trigger-layer"
      style="background-color: rgb(22, 119, 255);"
    />
  </div>
</div>
`;
